--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.7.8",
+    "electron": "*",
     "electron-builder": "^19.55.2",
     "electron-prebuilt": "^1.4.13",
     "electron-reload": "^1.2.2"
