--- a/package.json
+++ b/package.json
@@ -22,7 +22,5 @@
     "electron-prebuilt": "^1.4.13",
     "electron-reload": "^1.2.2"
   },
-  "dependencies": {
-    "node-powershell": "^3.3.1"
-  }
+  "dependencies": {}
 }
