Updated for dist usage (no more dev)

--- a/package.json
+++ b/package.json
@@ -1,14 +1,44 @@
 {
-  "name": "masgui",
-  "version": "0.9.2",
+  "name": "MasGUI",
+  "version": "1.0.0",
   "description": "Multi Algorithm Switching GUI",
   "main": "main.js",
   "scripts": {
+    "postinstall": "install-app-deps",
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
-  "postinstall": "electron-builder install-app-deps",
+  "build": {
+    "appId": "masgui",
+    "dmg": {
+      "contents": [{
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "extraResources" :{
+      "from": "scripts/",
+      "to": "."
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    },
+    "win": {
+      "target": "NSIS",
+      "icon": "img/icon2.ico"
+    }
+  },
   "repository": "https://github.com/stockbrot/masgui",
   "keywords": [
     "masgui",
@@ -26,6 +56,5 @@
     "electron-builder": "^19.55.3"
   },
   "dependencies": {},
-  "optionalDependencies": {
-  }
+  "optionalDependencies": {}
 }
